--- a/src/com/chun/gr/res/fxml/intro.fxml
+++ b/src/com/chun/gr/res/fxml/intro.fxml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
 
-<StackPane fx:id="stackPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.LoginController">
-    <children>
-        <Pane prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <ImageView fitHeight="500.0" fitWidth="800.0" pickOnBounds="true">
-                    <image>
-                        <Image url="@../../res/img/Login_Page_Image.png" />
-                    </image>
-                </ImageView>
-                <Pane fx:id="signPane" layoutX="510" layoutY="170"/>
-            </children>'
-        </Pane>
-    </children>
+
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.StackPane?>
+<StackPane fx:id="stackPane"
+           prefHeight="500.0"
+           prefWidth="800.0"
+           xmlns="http://javafx.com/javafx/8.0.171"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.chun.gr.java.controller.IntroController">
+   <children>
+        <!--<ImageView fitHeight="500.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">-->
+            <!--<Image url="@../../res/img/Login_Page_Image.png" />-->
+        <!--</ImageView>-->
+        <Pane fx:id="signPane" layoutX="510" layoutY="170" prefHeight="200.0" prefWidth="200.0" />
+   </children>
 </StackPane>
