--- a/src/com/chun/gr/res/fxml/sign_in.fxml
+++ b/src/com/chun/gr/res/fxml/sign_in.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <Pane fx:id="loginPane" prefHeight="300.0" prefWidth="267.0"
-      fx:controller="com.chun.gr.java.controller.SignInContoller"
+      fx:controller="com.chun.gr.java.controller.SignInController"
       xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml">
 
