--- a/src/com/chun/gr/res/fxml/intro.fxml
+++ b/src/com/chun/gr/res/fxml/intro.fxml
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.Pane?>
-
-
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.StackPane?>
-<StackPane fx:id="stackPane"
-           prefHeight="500.0"
-           prefWidth="800.0"
-           xmlns="http://javafx.com/javafx/8.0.171"
-           xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.chun.gr.java.controller.IntroController">
+
+<StackPane fx:id="stackPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.IntroController">
    <children>
-        <!--<ImageView fitHeight="500.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">-->
-            <!--<Image url="@../../res/img/Login_Page_Image.png" />-->
-        <!--</ImageView>-->
-        <Pane fx:id="signPane" layoutX="510" layoutY="170" prefHeight="200.0" prefWidth="200.0" />
+        <Pane fx:id="signPane" />
    </children>
+   <padding>
+      <Insets bottom="20.0" left="450.0" right="20.0" top="200.0" />
+   </padding>
 </StackPane>
