Parent Controller와 Child 데이터 송수신 완료

--- a/src/com/chun/gr/res/fxml/sign.fxml
+++ b/src/com/chun/gr/res/fxml/sign.fxml
@@ -6,8 +6,6 @@
 <AnchorPane fx:id="signPane" prefHeight="300.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.SignController">
    <children>
        <fx:include fx:id="signIn" source="sign_in.fxml"/>
-       <fx:include fx:id="signUp" source="sign_up.fxml"/>
-      <Button fx:id="signUpBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="102.0" AnchorPane.leftAnchor="160.0" AnchorPane.topAnchor="240.0" />
-      <Button fx:id="loginBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="102.0" textAlignment="CENTER" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="240.0" />
+       <fx:include fx:id="signUp" source="sign_up.fxml" visible="false"/>
    </children>
 </AnchorPane>
