--- a/src/com/chun/gr/res/fxml/sign_in.fxml
+++ b/src/com/chun/gr/res/fxml/sign_in.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="loginPane" prefHeight="200.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.SignInController">
+<Pane fx:id="loginPane" prefHeight="256.0" prefWidth="293.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.SignInController">
 
     <children>
         <TextField fx:id="loginIdTb" layoutX="75.0" layoutY="31.0" promptText="아이디" />
@@ -13,5 +14,7 @@
         <Label layoutX="37.0" layoutY="35.0" text="ID:" />
         <Label layoutX="40.0" layoutY="88.0" text="PW:" />
         <Label fx:id="loginWarningLbl" layoutX="34.0" layoutY="134.0" prefHeight="35.0" prefWidth="213.0" text="아이디 또는 비밀번호를 잘 못 입력하셨습니다" />
+        <Button fx:id="loginBtn" layoutX="24.0" layoutY="193.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="102.0" />
+        <Button fx:id="signUpBtn" layoutX="161.0" layoutY="193.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="102.0" textAlignment="CENTER" />
     </children>
 </Pane>
