--- a/src/com/chun/gr/res/fxml/intro.fxml
+++ b/src/com/chun/gr/res/fxml/intro.fxml
@@ -6,7 +6,7 @@
 
 <StackPane fx:id="stackPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.IntroController">
    <children>
-        <Pane fx:id="signPane" />
+      <fx:include fx:id="sign" source="sign.fxml"/>
    </children>
    <padding>
       <Insets bottom="20.0" left="450.0" right="20.0" top="200.0" />
