--- a/src/com/chun/gr/res/fxml/intro.fxml
+++ b/src/com/chun/gr/res/fxml/intro.fxml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane fx:id="stackPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.IntroController">
+<StackPane fx:id="introPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.IntroController">
    <children>
-      <fx:include fx:id="sign" source="sign.fxml"/>
+      <fx:include fx:id="sign" maxHeight="200" maxWidth="200" source="sign.fxml" StackPane.alignment="BOTTOM_RIGHT" />
    </children>
-   <padding>
-      <Insets bottom="20.0" left="450.0" right="20.0" top="200.0" />
-   </padding>
 </StackPane>
