--- a/src/com/chun/gr/res/fxml/guide_children4.fxml
+++ b/src/com/chun/gr/res/fxml/guide_children4.fxml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<StackPane fx:id="stackPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController">
-    <Button fx:id="nextBtn" mnemonicParsing="false" prefHeight="55.0" prefWidth="142.0" text="Button" />
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.effect.ImageInput?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<StackPane fx:id="children4" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController4">
+    <children>
+        <ImageView fitHeight="386.0" fitWidth="500.0" layoutX="354.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../res/img/Information4.png" />
+            </image>
+        </ImageView>
+        <ImageView fitHeight="313.0" fitWidth="68.0" layoutX="250.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../res/img/F_High_Image.png" />
+            </image>
+        </ImageView>
+        <ImageView fitHeight="74.0" fitWidth="119.0" layoutX="100.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../res/img/inform_s.png" />
+            </image>
+        </ImageView>
+        <Button fx:id="nextBtn" layoutX="499.0" layoutY="342.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="142.0" text="Button">
+            <effect>
+                <ImageInput>
+                    <source>
+                        <Image url="@../../res/img/Yes_btn.png" />
+                    </source>
+                </ImageInput>
+            </effect>
+        </Button>
+    </children>
 </StackPane>
 
