--- a/src/com/chun/gr/res/fxml/guide_children6.fxml
+++ b/src/com/chun/gr/res/fxml/guide_children6.fxml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<StackPane fx:id="stackPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController">
-    <Button fx:id="nextBtn" mnemonicParsing="false" prefHeight="55.0" prefWidth="142.0" text="Button" />
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.ImageInput?>
+<?import javafx.scene.image.Image?>
+<StackPane fx:id="children6" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController6">
+    <children>
+        <Button fx:id="nextBtn" layoutX="288.0" layoutY="244.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="208.0" text="Button">
+            <effect>
+                <ImageInput>
+                    <source>
+                        <Image url="@../../res/img/Game_Start_btn.png" />
+                    </source>
+                </ImageInput>
+            </effect>
+        </Button>
+        <Label layoutX="288.0" layoutY="307.0" prefHeight="55.0" prefWidth="242.0" text="게임 시작을 누르면 게임을 시작합니다." textFill="#6900ff" />
+    </children>
 </StackPane>
 
