--- a/src/com/chun/gr/res/fxml/guide_children5.fxml
+++ b/src/com/chun/gr/res/fxml/guide_children5.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<StackPane fx:id="children5" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController5">
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane fx:id="children5" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController5">
     <children>
         <ImageView fitHeight="386.0" fitWidth="500.0" layoutX="184.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -22,5 +23,5 @@
             </effect>
         </Button>
     </children>
-</StackPane>
+</AnchorPane>
 
