--- a/src/com/chun/gr/res/fxml/guide_children6.fxml
+++ b/src/com/chun/gr/res/fxml/guide_children6.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
-<StackPane fx:id="children6" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController6">
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane fx:id="children6" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chun.gr.java.controller.GuideChildrenController6">
     <children>
         <Button fx:id="nextBtn" layoutX="288.0" layoutY="244.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="208.0" text="Button">
             <effect>
@@ -18,5 +19,5 @@
         </Button>
         <Label layoutX="288.0" layoutY="307.0" prefHeight="55.0" prefWidth="242.0" text="게임 시작을 누르면 게임을 시작합니다." textFill="#6900ff" />
     </children>
-</StackPane>
+</AnchorPane>
 
